--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
         <i class="fas fa-angle-right" aria-hidden="true"></i>
       </span>
     </div>
-    <div class="home__recommendations-wrapper"></div>
+    <div class="home__recommendations-wrapper">
+      <div class="home__recommendations-content"></div>
+    </div>
   </div>
 
   <div class="home__favorites">
@@ -138,7 +140,9 @@
         <i class="fas fa-angle-right" aria-hidden="true"></i>
       </span>
     </div>
-    <div class="home__favorites-wrapper"></div>
+    <div class="home__favorites-wrapper">
+      <div class="home__favorites-content"></div>
+    </div>
   </div>
 
   <div class="home__mixtapes">
@@ -151,7 +155,9 @@
         <i class="fas fa-angle-right" aria-hidden="true"></i>
       </span>
     </div>
-    <div class="home__mixtapes-wrapper"></div>
+    <div class="home__mixtapes-wrapper">
+      <div class="home__mixtapes-content"></div>
+    </div>
   </div>
 
   <footer class="home__footer">
